objects/zqu__SequenceGenerator__c.object
<CustomObject>
    <description>A helper object for generating Sequence number.</description>
    <fields>
        <fullName>zqu__Length__c</fullName>
        <description>The length of number part of the generated sequence string</description>
        <label>Length</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__MaxValue__c</fullName>
        <label>Max Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__SeqName__c</fullName>
        <label>Seq name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Sequence Generator</label>
    <listViews>
        <fullName>zqu__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sequence Generator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sequence Generators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>